--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  border: 1px solid #000;
 }
 
 html, body {
@@ -41,32 +40,62 @@ html, body {
   }
 }
 
+@media (min-width: 1440px) {
+  .container {
+    max-width: 1400px;
+  }
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 4rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px 1px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px 1px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  -webkit-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 nav .logo {
   margin: 0 3rem;
+  font-weight: 900;
+  font-size: 1.5rem;
 }
 
-nav ul {
+nav .menu {
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-right: 3rem;
-  margin: 0;
+  margin: auto 3rem;
   padding: 0;
+  font-size: 1.1rem;
 }
 
-nav ul li {
-  margin: 0 .3rem;
-  color: rgba(0, 0, 0, 0.2);
+nav .menu li {
+  margin: 0 .5rem;
+}
+
+nav .menu li a {
+  text-decoration: none;
+  color: #858282;
+}
+
+nav .menu li i {
+  margin: auto 5px;
+  display: inline-block;
 }
 
 main {
@@ -74,32 +103,65 @@ main {
   height: 100%;
 }
 
+main .intro {
+  padding: 2rem;
+  background-size: cover;
+  background-position: center;
+}
+
+main .intro h2 {
+  color: #173b6c;
+  position: relative;
+  padding: 5px 0;
+}
+
+main .intro h2:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background-color: #149ddd;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+main .intro p {
+  font-weight: bold;
+}
+
 main ul {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
-  padding: 0;
+  padding: 3rem;
   margin: 0;
   grid-gap: 10px;
   min-height: 100vh;
   width: 100%;
-  border: 1px solid #000;
   justify-items: center;
-  -ms-grid-rows: (minmax(30vw, 1fr))[auto-fit];
-      grid-template-rows: repeat(auto-fit, minmax(30vw, 1fr));
-  -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  -ms-grid-rows: (minmax(30%, 1fr))[auto-fit];
+      grid-template-rows: repeat(auto-fit, minmax(30%, 1fr));
+  -ms-grid-columns: (minmax(30%, 1fr))[3];
+      grid-template-columns: repeat(3, minmax(30%, 1fr));
       grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8";
 }
 
 main ul li {
   width: 100%;
   height: 100%;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  overflow: none;
 }
 
-main ul li img {
-  width: 350px;
-  height: 350px;
+main ul li:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 
 main ul li a {
