--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ nav .menu li {
   margin: 0 .7rem;
 }
 
+nav .menu li a {
+  color: #09777d;
+  -webkit-text-decoration: no;
+          text-decoration: no;
+}
+
 @media (max-width: 800px) {
   .nav-flex {
     display: block;
@@ -134,9 +140,40 @@ nav .menu li {
   }
 }
 
+.about {
+  margin: auto;
+}
+
+.about .intro {
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about .intro h2 {
+  color: #173b6c;
+  position: relative;
+  padding: 5px 0;
+}
+
+.about .intro h2:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background-color: #149ddd;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+.about .intro p {
+  font-weight: bold;
+}
+
 main {
   margin: auto;
-  height: 100%;
 }
 
 main .intro {
@@ -202,16 +239,14 @@ main ul.protfolio-list {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
-  padding: 1rem 3rem;
+  padding: 2rem 3rem;
   margin: auto;
   grid-gap: 10px;
   min-height: 100vh;
   width: 100%;
   justify-items: center;
-  -ms-grid-rows: (minmax(30vw, 1fr))[auto-fit];
-      grid-template-rows: repeat(auto-fit, minmax(30vw, 1fr));
-  -ms-grid-columns: (minmax(30%, 1fr))[3];
-      grid-template-columns: repeat(3, minmax(30%, 1fr));
+  -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
       grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8";
 }
 
@@ -220,22 +255,22 @@ main ul.protfolio-list li {
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 4px;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-  overflow: none;
+  overflow: hidden;
 }
 
-main ul.protfolio-list li:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+main ul.protfolio-list li:hover a {
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
 }
 
 main ul.protfolio-list li a {
-  display: block;
+  display: inline-block;
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 main ul.protfolio-list .grid_1 {
