--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ html, body {
   height: 100%;
 }
 
-body {
-  background-color: #f5f8fd;
-}
-
 .container {
   margin: auto;
   padding: 0 15px;
@@ -127,6 +123,7 @@ nav .menu li a {
   .nav-flex div .icon {
     display: inline-block;
     float: right;
+    margin: auto 2rem;
   }
   .nav-flex .menu {
     display: none;
@@ -141,7 +138,11 @@ nav .menu li a {
 }
 
 .about {
-  margin: auto;
+  margin: 0;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .about .intro {
@@ -149,47 +150,141 @@ nav .menu li a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-.about .intro h2 {
-  color: #173b6c;
+.about .intro .intro_myself {
+  -ms-flex-flow: wrap;
+      flex-flow: wrap;
+  margin: 3rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.about .intro .intro_myself h1 {
   position: relative;
   padding: 5px 0;
+  color: #173b6c;
+  font-size: 5rem;
 }
 
-.about .intro h2:after {
-  content: "";
-  position: absolute;
-  width: 50px;
-  height: 3px;
-  background-color: #149ddd;
-  bottom: 0;
-  left: 0;
-  display: block;
-}
-
-.about .intro p {
+.about .intro .intro_myself h4 {
   font-weight: bold;
+  margin: 1rem;
+  font-size: 3rem;
 }
 
-main {
+.about .intro .intro_myself ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about .intro .intro_myself ul li i {
+  margin: 1rem;
+  font-size: 2rem;
+}
+
+.about .intro .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 1300px) {
+  .about {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .about .intro {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: wrap column-reverse;
+            flex-flow: wrap column-reverse;
+  }
+}
+
+@media (max-width: 1000px) {
+  .about .intro .intro_myself h1 {
+    font-size: 4rem;
+  }
+  .about .intro .intro_myself h4 {
+    font-size: 3.5rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .about {
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .about .intro {
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-flow: wrap column-reverse;
+            flex-flow: wrap column-reverse;
+  }
+  .about .intro .intro_myself h1 {
+    font-size: 2rem;
+  }
+  .about .intro .intro_myself h4 {
+    font-size: 1.5rem;
+  }
+  .about .intro .intro_myself ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .about .intro .intro_myself ul li i {
+    margin: 1rem;
+    font-size: 1rem;
+  }
+}
+
+.portfolio-page {
+  background-color: #f5f8fd;
+}
+
+.portfolio-page main {
   margin: auto;
 }
 
-main .intro {
+.portfolio-page main .intro {
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-main .intro h2 {
+.portfolio-page main .intro h2 {
   color: #173b6c;
   position: relative;
   padding: 5px 0;
 }
 
-main .intro h2:after {
+.portfolio-page main .intro h2:after {
   content: "";
   position: absolute;
   width: 50px;
@@ -200,17 +295,17 @@ main .intro h2:after {
   display: block;
 }
 
-main .intro p {
+.portfolio-page main .intro p {
   font-weight: bold;
 }
 
-main .list-menu {
+.portfolio-page main .list-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-main .list-menu ul.protfolio-list-menu {
+.portfolio-page main .list-menu ul.protfolio-list-menu {
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -228,14 +323,14 @@ main .list-menu ul.protfolio-list-menu {
           align-items: center;
 }
 
-main .list-menu li {
+.portfolio-page main .list-menu li {
   margin: 0 .7rem;
   width: 5rem;
   text-align: center;
   cursor: pointer;
 }
 
-main ul.protfolio-list {
+.portfolio-page main ul.protfolio-list {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
@@ -247,10 +342,12 @@ main ul.protfolio-list {
   justify-items: center;
   -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  -ms-grid-rows: (minmax(25%, 1fr))[auto-fit];
+      grid-template-rows: repeat(auto-fit, minmax(25%, 1fr));
       grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8";
 }
 
-main ul.protfolio-list li {
+.portfolio-page main ul.protfolio-list li {
   width: 100%;
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.3);
@@ -258,12 +355,12 @@ main ul.protfolio-list li {
   overflow: hidden;
 }
 
-main ul.protfolio-list li:hover a {
+.portfolio-page main ul.protfolio-list li:hover a {
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
 }
 
-main ul.protfolio-list li a {
+.portfolio-page main ul.protfolio-list li a {
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -273,69 +370,69 @@ main ul.protfolio-list li a {
   transition: all 0.2s ease;
 }
 
-main ul.protfolio-list .grid_1 {
+.portfolio-page main .grid_1 {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: grid_1;
 }
 
-main ul.protfolio-list .grid_2 {
+.portfolio-page main .grid_2 {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: grid_2;
 }
 
-main ul.protfolio-list .grid_3 {
+.portfolio-page main .grid_3 {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: grid_3;
 }
 
-main ul.protfolio-list .grid_4 {
+.portfolio-page main .grid_4 {
   -ms-grid-row: 3;
   -ms-grid-column: 2;
   grid-area: grid_4;
 }
 
-main ul.protfolio-list .grid_5 {
+.portfolio-page main .grid_5 {
   -ms-grid-row: 3;
   -ms-grid-column: 3;
   grid-area: grid_5;
 }
 
-main ul.protfolio-list .grid_6 {
+.portfolio-page main .grid_6 {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
   grid-area: grid_6;
 }
 
-main ul.protfolio-list .grid_7 {
+.portfolio-page main .grid_7 {
   -ms-grid-row: 4;
   -ms-grid-column: 2;
   grid-area: grid_7;
 }
 
-main ul.protfolio-list .grid_8 {
+.portfolio-page main .grid_8 {
   -ms-grid-row: 4;
   -ms-grid-column: 3;
   grid-area: grid_8;
 }
 
-main ul.protfolio-list .grid_1 {
+.portfolio-page main .grid_1 {
   background: url("./img/guess.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
-main ul.protfolio-list .grid_2 {
+.portfolio-page main .grid_2 {
   background: url("./img/weather.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
-main ul.protfolio-list .b {
+.portfolio-page main .b {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
@@ -343,5 +440,6 @@ main ul.protfolio-list .b {
   grid-area: big;
   background: url("./img/vote.png");
   background-size: 100%;
+  background-repeat: no-repeat;
 }
 /*# sourceMappingURL=style.css.map */
