--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ nav {
   background-color: white;
   -webkit-transition: all 1s ease;
   transition: all 1s ease;
-  z-index: 99;
 }
 
 nav div .logo {
@@ -93,13 +92,20 @@ nav .menu {
 }
 
 nav .menu li {
-  margin: 0 .7rem;
+  margin: 0 1.5rem;
 }
 
 nav .menu li a {
   color: #09777d;
-  -webkit-text-decoration: no;
-          text-decoration: no;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  height: 1.8rem;
+}
+
+nav .menu li a:hover {
+  color: #a2b7f0;
+  border-bottom: solid 1px #a2b7f0;
 }
 
 @media (max-width: 800px) {
@@ -137,15 +143,15 @@ nav .menu li a {
   }
 }
 
-.about {
+.home {
   margin: 0;
-  min-height: 100vh;
+  min-height: calc(100vh - 4rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.about .intro {
+.home .intro {
   padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -154,7 +160,7 @@ nav .menu li a {
       justify-content: space-around;
 }
 
-.about .intro .intro_myself {
+.home .intro .intro_myself {
   -ms-flex-flow: wrap;
       flex-flow: wrap;
   margin: 3rem;
@@ -163,20 +169,20 @@ nav .menu li a {
           justify-content: center;
 }
 
-.about .intro .intro_myself h1 {
+.home .intro .intro_myself h1 {
   position: relative;
   padding: 5px 0;
   color: #173b6c;
   font-size: 5rem;
 }
 
-.about .intro .intro_myself h4 {
+.home .intro .intro_myself h4 {
   font-weight: bold;
   margin: 1rem;
   font-size: 3rem;
 }
 
-.about .intro .intro_myself ul {
+.home .intro .intro_myself ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -185,12 +191,12 @@ nav .menu li a {
   display: flex;
 }
 
-.about .intro .intro_myself ul li i {
+.home .intro .intro_myself ul li i {
   margin: 1rem;
   font-size: 2rem;
 }
 
-.about .intro .img {
+.home .intro .img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -263,28 +269,23 @@ nav .menu li a {
   }
 }
 
-.portfolio-page {
+.about-page {
   background-color: #f5f8fd;
+  min-height: 100vh;
 }
 
-.portfolio-page main {
-  margin: auto;
+.about-page .about-title {
+  padding: 3rem;
 }
 
-.portfolio-page main .intro {
-  padding: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.portfolio-page main .intro h2 {
+.about-page .about-title h1 {
   color: #173b6c;
   position: relative;
   padding: 5px 0;
+  margin: 3rem;
 }
 
-.portfolio-page main .intro h2:after {
+.about-page .about-title h1:after {
   content: "";
   position: absolute;
   width: 50px;
@@ -295,17 +296,57 @@ nav .menu li a {
   display: block;
 }
 
-.portfolio-page main .intro p {
+.about-page .about-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 4rem;
+}
+
+.about-page .about-content .svg svg {
+  width: 500px;
+  height: 500px;
+}
+
+.about-page .about-intro {
+  padding: 3rem;
+}
+
+.portfolio-page .intro {
+  padding: 3rem;
+}
+
+.portfolio-page .intro h1 {
+  color: #173b6c;
+  position: relative;
+  padding: 5px 0;
+  margin: 3rem;
+}
+
+.portfolio-page .intro h1:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background-color: #149ddd;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+.portfolio-page .intro p {
   font-weight: bold;
 }
 
-.portfolio-page main .list-menu {
+.portfolio-page .list-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.portfolio-page main .list-menu ul.protfolio-list-menu {
+.portfolio-page .list-menu ul.protfolio-list-menu {
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -315,7 +356,7 @@ nav .menu li a {
           justify-content: center;
   padding: 0;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #f5f8fd;
   border-radius: 50px;
   height: 35px;
   -webkit-box-align: center;
@@ -323,22 +364,21 @@ nav .menu li a {
           align-items: center;
 }
 
-.portfolio-page main .list-menu li {
+.portfolio-page .list-menu li {
   margin: 0 .7rem;
   width: 5rem;
   text-align: center;
   cursor: pointer;
 }
 
-.portfolio-page main ul.protfolio-list {
+.portfolio-page ul.protfolio-list {
   list-style-type: none;
   display: -ms-grid;
   display: grid;
-  padding: 2rem 3rem;
-  margin: auto;
+  padding: 4rem;
   grid-gap: 10px;
   min-height: 100vh;
-  width: 100%;
+  max-width: 1000px;
   justify-items: center;
   -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
@@ -347,20 +387,19 @@ nav .menu li a {
       grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8";
 }
 
-.portfolio-page main ul.protfolio-list li {
+.portfolio-page ul.protfolio-list li {
   width: 100%;
   height: 100%;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 4px;
-  overflow: hidden;
 }
 
-.portfolio-page main ul.protfolio-list li:hover a {
+.portfolio-page ul.protfolio-list li:hover a {
   -webkit-transform: scale(1.03);
           transform: scale(1.03);
 }
 
-.portfolio-page main ul.protfolio-list li a {
+.portfolio-page ul.protfolio-list li a {
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -370,69 +409,69 @@ nav .menu li a {
   transition: all 0.2s ease;
 }
 
-.portfolio-page main .grid_1 {
+.portfolio-page ul.protfolio-list .grid_1 {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: grid_1;
 }
 
-.portfolio-page main .grid_2 {
+.portfolio-page ul.protfolio-list .grid_2 {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: grid_2;
 }
 
-.portfolio-page main .grid_3 {
+.portfolio-page ul.protfolio-list .grid_3 {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: grid_3;
 }
 
-.portfolio-page main .grid_4 {
+.portfolio-page ul.protfolio-list .grid_4 {
   -ms-grid-row: 3;
   -ms-grid-column: 2;
   grid-area: grid_4;
 }
 
-.portfolio-page main .grid_5 {
+.portfolio-page ul.protfolio-list .grid_5 {
   -ms-grid-row: 3;
   -ms-grid-column: 3;
   grid-area: grid_5;
 }
 
-.portfolio-page main .grid_6 {
+.portfolio-page ul.protfolio-list .grid_6 {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
   grid-area: grid_6;
 }
 
-.portfolio-page main .grid_7 {
+.portfolio-page ul.protfolio-list .grid_7 {
   -ms-grid-row: 4;
   -ms-grid-column: 2;
   grid-area: grid_7;
 }
 
-.portfolio-page main .grid_8 {
+.portfolio-page ul.protfolio-list .grid_8 {
   -ms-grid-row: 4;
   -ms-grid-column: 3;
   grid-area: grid_8;
 }
 
-.portfolio-page main .grid_1 {
+.portfolio-page ul.protfolio-list .grid_1 {
   background: url("./img/guess.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
-.portfolio-page main .grid_2 {
+.portfolio-page ul.protfolio-list .grid_2 {
   background: url("./img/weather.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
-.portfolio-page main .b {
+.portfolio-page ul.protfolio-list .b {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   -ms-grid-column: 2;
@@ -441,5 +480,36 @@ nav .menu li a {
   background: url("./img/vote.png");
   background-size: 100%;
   background-repeat: no-repeat;
+}
+
+.portfolio-contact {
+  background-color: #f5f8fd;
+}
+
+.portfolio-contact main {
+  padding: 2rem;
+}
+
+.portfolio-contact main h1 {
+  color: #173b6c;
+  position: relative;
+  padding: 5px 0;
+  margin: 3rem;
+}
+
+.portfolio-contact main h1:after {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 3px;
+  background-color: #149ddd;
+  bottom: 0;
+  left: 0;
+  display: block;
+}
+
+.portfolio-contact main form {
+  width: 60%;
+  background-color: white;
 }
 /*# sourceMappingURL=style.css.map */
