--- a/style.sass
+++ b/style.sass
@@ -1,4 +1,6 @@
-$title_color: #173b6c
+$color_title: #173b6c
+$color_blue_background: #f5f8fd
+
     
 *
     box-sizing: border-box
@@ -42,7 +44,6 @@ nav
     top: 0
     background-color: white
     transition: all 1s ease
-    z-index: 99
     div
         .logo
             margin: 0 3rem 
@@ -62,10 +63,17 @@ nav
         padding: 0
         font-size: 1.1rem
         li
-            margin: 0 .7rem
+            margin: 0 1.5rem
             a
                 color: #09777d
-                text-decoration: no
+                text-decoration: none
+                font-weight: bold
+                display: inline-block
+                height: 1.8rem
+                &:hover
+                    color: #a2b7f0
+                    border-bottom: solid 1px #a2b7f0
+
 
 
 @media (max-width: 800px)
@@ -91,9 +99,9 @@ nav
                 margin: .5rem auto
 
 
-.about
+.home
     margin: 0
-    min-height: 100vh
+    min-height: calc(100vh - 4rem)
     display: flex
     .intro
         padding: 2rem
@@ -107,7 +115,7 @@ nav
             h1
                 position: relative
                 padding: 5px 0
-                color: $title_color
+                color: $color_title
                 font-size: 5rem
             h4
                 font-weight: bold
@@ -161,77 +169,102 @@ nav
                             margin: 1rem
                             font-size: 1rem
 
+.about-page
+    background-color: $color_blue_background
+    min-height: 100vh
+    .about-title
+        padding: 3rem
+        h1
+            color: $color_title
+            position: relative
+            padding: 5px 0
+            margin: 3rem
+            &:after
+                content: ""
+                position: absolute
+                width: 50px
+                height: 3px
+                background-color: #149ddd
+                bottom: 0
+                left: 0
+                display: block
+    .about-content
+        display: flex
+        justify-content: space-around
+        padding: 4rem
+        .svg
+            svg
+                width: 500px
+                height: 500px
+    .about-intro
+        padding: 3rem
+
+
 .portfolio-page
-    background-color: #f5f8fd
-    main
-        margin: auto
-        .intro
-            padding: 2rem
-            display: flex
-            h2
-                color: $title_color
-                position: relative
-                padding: 5px 0
-                &:after
-                    content: ""
-                    position: absolute
-                    width: 50px
-                    height: 3px
-                    background-color: #149ddd
-                    bottom: 0
-                    left: 0
-                    display: block
-            p 
-                font-weight: bold
-                // line-height: 1.2
-        .list-menu
-            display: flex
-            ul.protfolio-list-menu
-                list-style-type: none
-                display: flex
-                justify-content: center
-                padding: 0
-                margin: 0 auto
-                background-color: #fff
-                border-radius: 50px
-                height: 35px
-                align-items: center
-            li
-                margin: 0 .7rem
-                width: 5rem
-                text-align: center
-                cursor: pointer
-
-
-        ul.protfolio-list
+    .intro
+        padding: 3rem
+        h1
+            color: $color_title
+            position: relative
+            padding: 5px 0
+            margin: 3rem
+            &:after
+                content: ""
+                position: absolute
+                width: 50px
+                height: 3px
+                background-color: #149ddd
+                bottom: 0
+                left: 0
+                display: block
+        p 
+            font-weight: bold
+            // line-height: 1.2
+    .list-menu
+        display: flex
+        ul.protfolio-list-menu
             list-style-type: none
-            display: grid
-            padding: 2rem 3rem
-            margin: auto
-            grid-gap: 10px
-            min-height: 100vh
+            display: flex
+            justify-content: center
+            padding: 0
+            margin: 0 auto
+            background-color: $color_blue_background
+            border-radius: 50px
+            height: 35px
+            align-items: center
+        li
+            margin: 0 .7rem
+            width: 5rem
+            text-align: center
+            cursor: pointer
+    ul.protfolio-list
+        list-style-type: none
+        display: grid
+        padding: 4rem
+        grid-gap: 10px
+        min-height: 100vh
+        max-width: 1000px
+        // border: 1px solid #000
+        justify-items: center
+        grid-template-columns: repeat(auto-fit, minmax(30%, 1fr))
+        grid-template-rows: repeat(auto-fit, minmax(25%, 1fr))
+        grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8"
+        li
             width: 100%
-            // border: 1px solid #000
-            justify-items: center
-            grid-template-columns: repeat(auto-fit, minmax(30%, 1fr))
-            grid-template-rows: repeat(auto-fit, minmax(25%, 1fr))
-            grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8"
-            li
+            height: 100%
+            border: 1px solid rgba(0, 0, 0, .3)
+            border-radius: 4px
+            // overflow: hidden
+
+            &:hover a
+                // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+                transform: scale(1.03)
+            a
+                display: inline-block
                 width: 100%
                 height: 100%
-                border: 1px solid rgba(0, 0, 0, .3)
-                border-radius: 4px
-                overflow: hidden
-
-                &:hover a
-                        // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                        transform: scale(1.03)
-                a
-                    display: inline-block
-                    width: 100%
-                    height: 100%
-                    object-fit: cover
-                    transition: all 0.2s ease
+                object-fit: cover
+                transition: all 0.2s ease
 
 
         @for $i from 1 through 8
@@ -255,22 +288,25 @@ nav
             background-repeat: no-repeat
 
 
-// .contact 
-//     .form
-//         width: 100%
-//         height: 200px
-//         border: 1px solid #000
-//         margin: auto
-//         .flex
-//             display: flex
-//             justify-content: center
-//             section 
-//                 display: flex
-//                 label 
-//                     width: 30%
-//                 input 
-//                     width: 100%
-                
-//             p
-//                 margin: auto
+.portfolio-contact
+    background-color: $color_blue_background
+    main
+        padding: 2rem
+        h1
+            color: $color_title
+            position: relative
+            padding: 5px 0
+            margin: 3rem
+            &:after
+                content: ""
+                position: absolute
+                width: 50px
+                height: 3px
+                background-color: #149ddd
+                bottom: 0
+                left: 0
+                display: block
+        form
+            width: 60%
+            background-color: white
 
