--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ nav .menu li a:hover {
 
 .home .intro .intro_myself ul li i {
   margin: 1rem;
-  font-size: 2rem;
+  font-size: 1.7rem;
 }
 
 .home .intro .img {
@@ -208,14 +208,19 @@ nav .menu li a:hover {
           align-items: center;
 }
 
+.home .intro .img img {
+  border: 10px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+}
+
 @media (max-width: 1300px) {
-  .about {
+  .home {
     margin: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
-  .about .intro {
+  .home .intro {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -226,23 +231,14 @@ nav .menu li a:hover {
   }
 }
 
-@media (max-width: 1000px) {
-  .about .intro .intro_myself h1 {
-    font-size: 4rem;
-  }
-  .about .intro .intro_myself h4 {
-    font-size: 3.5rem;
-  }
-}
-
-@media (max-width: 800px) {
-  .about {
+@media (max-width: 600px) {
+  .home {
     margin: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
-  .about .intro {
+  .home .intro {
     padding: 0;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -252,20 +248,22 @@ nav .menu li a:hover {
         -ms-flex-flow: wrap column-reverse;
             flex-flow: wrap column-reverse;
   }
-  .about .intro .intro_myself h1 {
-    font-size: 2rem;
+  .home .intro .intro_myself h1 {
+    font-size: 3rem;
   }
-  .about .intro .intro_myself h4 {
+  .home .intro .intro_myself h4 {
     font-size: 1.5rem;
+    margin: 0 .5rem;
+    text-align: center;
   }
-  .about .intro .intro_myself ul {
+  .home .intro .intro_myself ul {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .about .intro .intro_myself ul li i {
+  .home .intro .intro_myself ul li i {
     margin: 1rem;
-    font-size: 1rem;
+    font-size: 2rem;
   }
 }
 
@@ -306,12 +304,67 @@ nav .menu li a:hover {
 }
 
 .about-page .about-content .svg svg {
-  width: 500px;
+  width: 100%;
   height: 500px;
 }
 
 .about-page .about-intro {
   padding: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.about-page .about-intro .about-skill {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (20%)[5];
+      grid-template-columns: repeat(5, 20%);
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.about-page .about-intro .about-skill li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.about-page .about-intro .about-skill li i {
+  margin: auto;
+  font-size: 3rem;
+}
+
+.about-page .about-intro .about-skill li .fa-html5 {
+  color: #E55126;
+}
+
+.about-page .about-intro .about-skill li .fa-css3-alt {
+  color: #0C73B8;
+}
+
+.about-page .about-intro .about-skill li .fa-js-square {
+  color: #E5A229;
+}
+
+.about-page .about-intro .about-skill li .fa-bootstrap {
+  color: #553D7C;
+}
+
+.about-page .about-intro .about-skill li .fa-sass {
+  color: #CE6799;
 }
 
 .portfolio-page .intro {
@@ -358,7 +411,7 @@ nav .menu li a:hover {
   margin: 0 auto;
   background-color: #f5f8fd;
   border-radius: 50px;
-  height: 35px;
+  height: 50px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -369,6 +422,7 @@ nav .menu li a:hover {
   width: 5rem;
   text-align: center;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .portfolio-page ul.protfolio-list {
@@ -376,14 +430,14 @@ nav .menu li a:hover {
   display: -ms-grid;
   display: grid;
   padding: 4rem;
-  grid-gap: 10px;
-  min-height: 100vh;
+  grid-gap: 15px;
+  min-height: 1000px;
   max-width: 1000px;
   justify-items: center;
   -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
-  -ms-grid-rows: (minmax(25%, 1fr))[auto-fit];
-      grid-template-rows: repeat(auto-fit, minmax(25%, 1fr));
+  -ms-grid-rows: (minmax(calc(25% - 45px), 1fr))[auto-fit];
+      grid-template-rows: repeat(auto-fit, minmax(calc(25% - 45px), 1fr));
       grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8";
 }
 
@@ -509,7 +563,7 @@ nav .menu li a:hover {
 }
 
 .portfolio-contact main form {
-  width: 60%;
   background-color: white;
+  max-width: 600px;
 }
 /*# sourceMappingURL=style.css.map */
