--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 html, body {
   padding: 0;
   margin: 0;
-  height: 100%;
 }
 
 .container {
@@ -206,11 +205,13 @@ nav .menu li a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 2rem;
 }
 
 .home .intro .img img {
   border: 10px solid rgba(0, 0, 0, 0.3);
   border-radius: 50%;
+  width: 350px;
 }
 
 @media (max-width: 1300px) {
@@ -264,6 +265,9 @@ nav .menu li a:hover {
   .home .intro .intro_myself ul li i {
     margin: 1rem;
     font-size: 2rem;
+  }
+  .home .intro .img img {
+    width: 300px;
   }
 }
 
@@ -365,6 +369,68 @@ nav .menu li a:hover {
 
 .about-page .about-intro .about-skill li .fa-sass {
   color: #CE6799;
+}
+
+@media (max-width: 1200px) {
+  .about-page .about-content .svg svg {
+    width: 100%;
+    height: 500px;
+  }
+  .about-page .about-intro .about-skill li {
+    font-size: .8rem;
+  }
+  .about-page .about-intro .about-skill li i {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  .about-page .about-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    gap: 4rem;
+    padding: .8rem;
+  }
+  .about-page .about-content .svg svg {
+    width: 100%;
+    height: 200px;
+  }
+  .about-page .about-intro {
+    gap: 3rem;
+    padding: 1rem;
+  }
+  .about-page .about-intro .about-skill li {
+    font-size: .8rem;
+  }
+  .about-page .about-intro .about-skill li i {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .about-page .about-content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+    gap: 4rem;
+  }
+  .about-page .about-content .svg svg {
+    width: 100%;
+    height: 200px;
+  }
+  .about-page .about-intro {
+    gap: 3rem;
+    padding: .5rem;
+  }
+  .about-page .about-intro .about-skill li {
+    font-size: .2rem;
+  }
+  .about-page .about-intro .about-skill li i {
+    font-size: 2rem;
+  }
 }
 
 .portfolio-page .intro {
