--- a/style.sass
+++ b/style.sass
@@ -77,7 +77,7 @@ nav
 @media (max-width: 800px)
     .nav-flex
         display: block
-        position: relative
+        position: sticky
         div 
             display: flex
             justify-content: space-between
@@ -96,6 +96,11 @@ nav
                 display: block
                 margin: .5rem auto
 
+@media (max-width: 600px)
+    .nav-flex
+        div 
+            .logo 
+                font-size: 1.2rem
 
 .home
     margin: 0
@@ -175,8 +180,9 @@ nav
                             margin: 1rem
                             font-size: 2rem
             .img
+                margin: 2rem 0
                 img
-                    width: 300px
+                    width: 290px
 
 .about-page
     background-color: $color_blue_background
@@ -285,9 +291,11 @@ nav
         .about-intro
             gap: 3rem
             padding: .5rem
+            h4
+                font-size: 1.3rem
             .about-skill
                 li
-                    font-size: .2rem
+                    font-size: .5rem
                     i
                         font-size: 2rem
 
@@ -334,20 +342,20 @@ nav
         display: grid
         padding: 4rem
         grid-gap: 15px
-        min-height: 1000px
-        max-width: 1000px
-        // border: 1px solid #000
+        // min-height: 1000px
+        max-width: 1100px
+        justify-content: center
         justify-items: center
-        grid-template-columns: repeat(auto-fit, minmax(30%, 1fr))
-        grid-template-rows: repeat(auto-fit, minmax(calc(25% - 45px), 1fr))
-        grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8"
+        grid-template-columns: repeat(auto-fit, minmax(300px, 30%))
+        grid-template-rows: repeat(auto-fit, 300px)
+        // grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8
         li
             width: 100%
             height: 100%
             border: 1px solid rgba(0, 0, 0, .3)
             border-radius: 4px
-            // overflow: hidden
-
+            overflow: hidden
+            display: block
             &:hover a
                 // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
                 transform: scale(1.03)
@@ -359,9 +367,9 @@ nav
                 transition: all 0.2s ease
 
 
-        @for $i from 1 through 8
-            .grid_#{$i}
-                grid-area: grid_#{$i}
+        // @for $i from 1 through 8
+        //     .grid_#{$i}
+        //         grid-area: grid_#{$i}
 
         .grid_1
             background: url("./img/guess.png")
@@ -374,12 +382,19 @@ nav
             background-repeat: no-repeat
             background-size: 110%
         .b
-            grid-area: big
             background: url("./img/vote.png")
             background-size: 100%
             background-repeat: no-repeat
+            background-position: center
 
+@media (max-width: 600px)
+    .portfolio-page
+        .list-menu
+            ul.protfolio-list-menu
+                li
+                    width: 4rem
 
+// contact
 .portfolio-contact
     background-color: $color_blue_background
     main
@@ -401,4 +416,5 @@ nav
         form
             background-color: white
             max-width: 600px 
+            
 
