--- a/style.css
+++ b/style.css
@@ -523,7 +523,7 @@ nav .menu li a:hover {
 
 .portfolio-page ul.protfolio-list li {
   width: 100%;
-  height: 100%;
+  height: 300px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 4px;
   overflow: hidden;
@@ -601,5 +601,52 @@ nav .menu li a:hover {
 .portfolio-contact main form {
   background-color: white;
   max-width: 600px;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 120px;
+}
+
+.footer p {
+  margin: 0;
+}
+
+.footer ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.footer ul li i {
+  color: rgba(0, 0, 0, 0.5);
+  margin: 1rem;
+  font-size: 1rem;
+}
+
+.footer ul li i:hover {
+  color: #93e7d1;
+}
+
+@media (max-width: 600px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column;
+            flex-flow: column;
+  }
+  .footer p {
+    margin: 1rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
