--- a/style.sass
+++ b/style.sass
@@ -347,11 +347,11 @@ nav
         max-width: 1100px
         justify-content: center
         justify-items: center
-        grid-template-columns: repeat(auto-fit, minmax(300px, 30%))
-        grid-template-rows: repeat(auto-fit, 300px)
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
+        // grid-template-rows: repeat(auto-fit, 300px)
         // grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8
         li
-            width: 100%
+            width: 300px
             height: 300px
             border: 1px solid rgba(0, 0, 0, .3)
             border-radius: 4px
@@ -426,6 +426,7 @@ nav
     height: 120px
     p
         margin: 0
+        font-weight: 600
     ul 
         margin: 0
         padding: 0
