--- a/style.sass
+++ b/style.sass
@@ -427,6 +427,11 @@ nav
     p
         margin: 0
         font-weight: 600
+        a
+            text-decoration: none
+            color: rgba(0, 0, 0, .6)
+            &:hover
+                color: $color_icon_hover
     ul 
         margin: 0
         padding: 0
