--- a/style.sass
+++ b/style.sass
@@ -1,7 +1,7 @@
 $color_title: #173b6c
 $color_blue_background: #f5f8fd
 $color_icon_hover: #93e7d1
-
+$color_gray: #b0c7df
     
 *
     box-sizing: border-box
@@ -43,12 +43,16 @@ nav
     top: 0
     background-color: white
     transition: all 1s ease
+    z-index: 1
     div
         .logo
             margin: 0 3rem 
             font-weight: 900
             font-size: 1.5rem
             color: #149ddd
+            a
+                text-decoration: none
+
         .icon
             display: none
             font-size: 1.5rem
@@ -68,11 +72,9 @@ nav
                 text-decoration: none
                 font-weight: bold
                 display: inline-block
-                height: 1.8rem
+                height: 2rem
                 &:hover
-                    color: #a2b7f0
-                    border-bottom: solid 1px #a2b7f0
-
+                    border-bottom: solid 2px $color_gray
 
 
 @media (max-width: 800px)
@@ -151,14 +153,16 @@ nav
         .intro
             align-items: center
             flex-flow: wrap column-reverse
-// @media (max-width: 1000px)
-//     .home
-//         .intro
-//             .intro_myself
-//                 h1
-//                     font-size: 4rem
-//                 h4
-//                     font-size: 3.5rem
+@media (max-width: 800px)
+    .home
+        .intro
+            .intro_myself
+                margin: 1rem
+                h1
+                    font-size: 4rem
+                h4
+                    font-size: 2rem
+                    
 @media (max-width: 600px)
     .home
         margin: 0
@@ -348,7 +352,6 @@ nav
         justify-content: center
         justify-items: center
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr))
-        // grid-template-rows: repeat(auto-fit, 300px)
         // grid-template-areas: "grid_1 big big" "grid_2 big big" "grid_3 grid_4 grid_5" "grid_6 grid_7 grid_8
         li
             width: 300px
@@ -357,15 +360,41 @@ nav
             border-radius: 4px
             overflow: hidden
             display: block
-            &:hover a
-                // box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                transform: scale(1.03)
+            position: relative
+            .cover
+                height: 298px
+                width: 298px
+                background-color: #b0c7df
+                position: absolute
+                opacity: 0
+                top: 0
+                transition: all .3s ease
+                color: white
+                
+                .cover-flex
+                    height: 50%
+                    width: 100%
+                    display: flex
+                    justify-content: center
+                    align-items: flex-end
+                    a
+                        font-size: 2rem
+                        display: inline-block
+                        margin: 1rem
+                        color: white
+                h5
+                    text-align: center
             a
                 display: inline-block
                 width: 100%
                 height: 100%
                 object-fit: cover
-                transition: all 0.2s ease
+            &:hover
+                border: none
+                .cover
+                    opacity: .95
+                    transform: scale(1.03)
+
 
 
         // @for $i from 1 through 8
@@ -394,9 +423,11 @@ nav
             ul.protfolio-list-menu
                 li
                     width: 4rem
+.btn-color
+    color: #149ddd
 
 // contact
-.portfolio-contact
+.contact-page
     background-color: $color_blue_background
     main
         padding: 2rem
