--- a/style.sass
+++ b/style.sass
@@ -76,6 +76,8 @@ nav
                 &:hover
                     border-bottom: solid 2px $color_gray
 
+.nav-scroll-underline
+    border-bottom: solid 2px $color_gray
 
 @media (max-width: 800px)
     .nav-flex
