--- a/style/style.css
+++ b/style/style.css
@@ -605,21 +605,21 @@ nav .menu li a:hover {
 }
 
 .portfolio-page ul.protfolio-list .grid_1 {
-  background: url("./img/guess.png");
+  background: url("../img/guess.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
 .portfolio-page ul.protfolio-list .grid_2 {
-  background: url("./img/weather.png");
+  background: url("../img/weather.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 110%;
 }
 
 .portfolio-page ul.protfolio-list .b {
-  background: url("./img/vote.png");
+  background: url("../img/vote.png");
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
