--- a/style/style.sass
+++ b/style/style.sass
@@ -404,17 +404,17 @@ nav
         //         grid-area: grid_#{$i}
 
         .grid_1
-            background: url("./img/guess.png")
+            background: url("../img/guess.png")
             background-position: center
             background-repeat: no-repeat
             background-size: 110%
         .grid_2
-            background: url("./img/weather.png")
+            background: url("../img/weather.png")
             background-position: center
             background-repeat: no-repeat
             background-size: 110%
         .b
-            background: url("./img/vote.png")
+            background: url("../img/vote.png")
             background-size: 100%
             background-repeat: no-repeat
             background-position: center
