--- a/style/style.sass
+++ b/style/style.sass
@@ -306,7 +306,62 @@ nav
                     i
                         font-size: 2rem
 
+.experience-page 
+    min-height: 100vh
+    .experience-title
+        padding: 3rem
+        h1
+            color: $color_title
+            position: relative
+            padding: 5px 0
+            margin: 3rem
+            &:after
+                content: ""
+                position: absolute
+                width: 50px
+                height: 3px
+                background-color: #149ddd
+                bottom: 0
+                left: 0
+                display: block
+    .experience-content
+        display: flex
+        flex-flow: wrap
+        justify-content: center
+        padding: 2rem
+        gap: 2rem
+        height: 60vh
+        .education, .work-experience
+            min-width: 300px
+            width: 45%
+            // border: 1px solid #000
+            box-shadow: rgba(0, 0, 0, 0.1) 1px 5px 10px 1px
+            @media (max-width: 1000px)
+                width: 100%
+            ul
+                list-style-type: none
+                margin: 0
+                padding: 1rem
+                li
+                    margin: 1rem
+                    h3
+                        color: $color_title
+                        position: relative
+                        display: inline-block
+                        font-weight: 1000
+                    p
+                        font-weight: 700
+                        color: #3e64ff
+                        font-size: 1.2rem
+                    h5
+                        font-size: 1.5rem
+                        font-weight: 600
+                    h4
+                        font-size: 1rem
+                        margin: 1rem auto
+
 .portfolio-page
+    background-color: $color_blue_background
     .intro
         padding: 3rem
         h1
@@ -430,7 +485,6 @@ nav
 
 // contact
 .contact-page
-    background-color: $color_blue_background
     main
         padding: 2rem
         h1
@@ -453,6 +507,8 @@ nav
             
 
 .footer 
+    background-color: $color_blue_background
+    border-top: 1px solid rgba(0, 0, 0, .1)
     display: flex
     justify-content: space-around
     align-items: center
