--- a/style/back.sass
+++ b/style/back.sass
@@ -42,3 +42,30 @@ $color_gray: #b0c7df
             flex: 0 0 70%
             form
                 margin: auto
+
+// manage 
+.manage-page
+    main
+        padding: 2rem
+    .manage
+        display: flex
+        justify-content: space-between
+        justify-items: center
+        gap: 4rem
+        ul.manage-nav
+            border: 1px solid #beb4b4
+            padding: 2rem 1rem
+            margin-top: 0
+            margin-left: 0
+            border-radius: 3px
+            li
+                list-style: none
+                margin: 1rem auto
+        .contain
+            flex: 0 0 70%
+            form
+                margin: auto
+
+//experience 
+.exp-page
+    
