--- a/style/style.sass
+++ b/style/style.sass
@@ -419,18 +419,26 @@ nav
             border: 1px solid rgba(0, 0, 0, .3)
             border-radius: 4px
             overflow: hidden
-            display: block
             position: relative
+            &:hover img
+                transform: scale(1.05)
+            &:hover .cover
+                opacity: .95
+                transform: scale(1.03)
+            img 
+                width: 100%
+                height: 100%
+                object-fit: cover
+                transition: all 0.3s ease
             .cover
-                height: 298px
-                width: 298px
+                height: 300px
+                width: 300px
                 background-color: #b0c7df
                 position: absolute
                 opacity: 0
                 top: 0
                 transition: all .3s ease
                 color: white
-                
                 .cover-flex
                     height: 50%
                     width: 100%
@@ -449,33 +457,10 @@ nav
                 width: 100%
                 height: 100%
                 object-fit: cover
-            &:hover
-                border: none
-                .cover
-                    opacity: .95
-                    transform: scale(1.03)
-
-
-
+            
         // @for $i from 1 through 8
         //     .grid_#{$i}
         //         grid-area: grid_#{$i}
-
-        .grid_1
-            background: url("../img/guess.png")
-            background-position: center
-            background-repeat: no-repeat
-            background-size: 110%
-        .grid_2
-            background: url("../img/weather.png")
-            background-position: center
-            background-repeat: no-repeat
-            background-size: 110%
-        .b
-            background: url("../img/vote.png")
-            background-size: 100%
-            background-repeat: no-repeat
-            background-position: center
 
 @media (max-width: 600px)
     .portfolio-page
