frontend porfolio switch method

--- a/style/style.sass
+++ b/style/style.sass
@@ -365,6 +365,7 @@ nav
 
 .portfolio-page
     background-color: $color_blue_background
+    min-height: 100vh
     .intro
         padding: 3rem
         h1
