add backend contact list page

--- a/style/back.sass
+++ b/style/back.sass
@@ -30,7 +30,7 @@ $color_gray: #b0c7df
         justify-items: center
         gap: 4rem
         ul.manage-nav
-            border: 1px solid #beb4b4
+            // border: 1px solid #beb4b4
             padding: 2rem 1rem
             margin-top: 0
             margin-left: 0
@@ -53,7 +53,7 @@ $color_gray: #b0c7df
         justify-items: center
         gap: 4rem
         ul.manage-nav
-            border: 1px solid #beb4b4
+            // border: 1px solid #beb4b4
             padding: 2rem 1rem
             margin-top: 0
             margin-left: 0
