--- a/style/style.sass
+++ b/style/style.sass
@@ -552,6 +552,10 @@ nav
         background-color: #edf8f3
         border-radius: 1.5rem
         border: 1px solid #dfdbdb
+        i
+            font-size: 5rem
+            color: #71df89
+            margin-top: 3rem
         section
             margin-top: 2rem
         p
