Improve background nav btn rwd

--- a/style/style.sass
+++ b/style/style.sass
@@ -35,7 +35,7 @@ body
     @media (min-width: 1440px)
         max-width: 1400px
 
-nav
+nav.nav-flex
     display: flex
     justify-content: space-between
     align-items: center
